# q-xdg

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL
doc/: Doxyfile.in
src/: xdg.h  xdgenvironment.cpp  xdgenvironment.h  xdgexport.h  xdgicon.cpp  xdgicon.h  xdgiconengine.cpp  xdgiconengine_p.h  xdgiconmanager.cpp  xdgiconmanager.h  xdgiconmanager_p.h  xdgicontheme.cpp  xdgicontheme.h  xdgicontheme_p.h  xdgthemechooser.cpp  xdgthemechooser.h
test/: main.cpp
